<?xml version="1.0"?>
<package>
  <name>itu_agv_2</name>
  <version>0.0.1</version>
  <description>The itu_agv second metapackage</description>

  <maintainer email="cagatayyuruk@gmail.com">cagatayyuruk</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
     <metapackage />
  </export>
</package>

